declarator/test/snippets/ok/headers/details/ts_module4_include.h
#pragma once

#include <TS.h>

namespace internal IS_TS_MODULE
{

namespace entities IS_TS_NAMESPACE
{

class TS_EXPORT Entity
{
public:
    TS_METHOD Entity() = default;
    TS_METHOD void entity();
};

}   // namespace entities

}   // namespace internal

